[gd_scene load_steps=2 format=3 uid="uid://b1dlw2ahcaep2"]

[ext_resource type="Script" path="res://scripts/user_interface/uiKeybindButton.gd" id="1_364vn"]

[node name="KeybindButton" type="Button"]
custom_minimum_size = Vector2(0, 24)
offset_right = 152.0
offset_bottom = 18.0
alignment = 0
script = ExtResource("1_364vn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Action" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Test"
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Input" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
text = "Test"
vertical_alignment = 1
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
